[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy==1.11.3; python_version=='3.6'",
    "numpy==1.14.6; python_version=='3.7'",
    "numpy==1.17.5; python_version=='3.8'",
    "numpy==1.19.5; python_version=='3.9'",
    "numpy==1.21.3; python_version=='3.10'",
    "numpy; python_version>='3.11'",
    "Cython>0.28",
]

[tool.cibuildwheel]
build = [
    "cp3*-manylinux_x86_64",
    "cp3*-macosx_x86_64",
    "cp3*-macosx_arm64",
    "cp3*-win_amd64",
]
build-verbosity = "3"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.windows]
environment = { ZLIB_INCLUDE_DIR="zlib/include", ZLIB_LIB_DIR="zlib/lib_release" }
before-build = [
    "nuget install zlib-msvc-x64 -ExcludeVersion",
    "mv zlib-msvc-x64/build/native zlib",
    "mv zlib/lib_release/zlib.lib zlib/lib_release/z.lib",
]
repair-wheel-command = [
    "pip install delvewheel",
    "delvewheel repair {wheel} --add-path=zlib/bin_release --wheel-dir={dest_dir}",
]
